emg_animation/src/snapshots/emg_animation__tests__am1-first.snap
---
source: emg_animation/src/lib.rs
expression: "&am_state"

---
Animation {
    steps: [
        _Step,
        To(
            [
                Prop(
                    "opacity",
                    Motion {
                        position: NotNan(
                            1.0,
                        ),
                        velocity: NotNan(
                            0.0,
                        ),
                        target: NotNan(
                            1.0,
                        ),
                        interpolation: Spring {
                            stiffness: NotNan(
                                170.0,
                            ),
                            damping: NotNan(
                                26.0,
                            ),
                        },
                        unit: None,
                        interpolation_override: None,
                    },
                ),
            ],
        ),
    ],
    props: [
        Prop(
            "opacity",
            Motion {
                position: NotNan(
                    0.95278155548,
                ),
                velocity: NotNan(
                    -2.83322,
                ),
                target: NotNan(
                    0.0,
                ),
                interpolation: Spring {
                    stiffness: NotNan(
                        170.0,
                    ),
                    damping: NotNan(
                        26.0,
                    ),
                },
                unit: None,
                interpolation_override: None,
            },
        ),
    ],
    timing: Timing {
        current: 10s,
        dt: 16.666ms,
    },
    running: true,
    interruption: [],
}
