emg_animation/src/snapshots/emg_animation__tests__am2.snap
---
source: emg_animation/src/lib.rs
expression: "&am_state"
---
AnimationOG {
    steps: [
        _Step,
        To(
            [
                Prop(
                    TypeName(
                        "opacity",
                    ),
                    Motion {
                        position: NotNan(
                            1.0,
                        ),
                        velocity: NotNan(
                            0.0,
                        ),
                        target: NotNan(
                            1.0,
                        ),
                        interpolation: Spring {
                            stiffness: NotNan(
                                170.0,
                            ),
                            damping: NotNan(
                                26.0,
                            ),
                        },
                        unit: Empty,
                        interpolation_override: None,
                    },
                ),
            ],
        ),
    ],
    props: [
        Prop(
            TypeName(
                "opacity",
            ),
            Motion {
                position: NotNan(
                    0.8848428945055103,
                ),
                velocity: NotNan(
                    -4.2461663109056,
                ),
                target: NotNan(
                    0.0,
                ),
                interpolation: Spring {
                    stiffness: NotNan(
                        170.0,
                    ),
                    damping: NotNan(
                        26.0,
                    ),
                },
                unit: Empty,
                interpolation_override: None,
            },
        ),
    ],
    timing: Timing {
        current: 10.016s,
        dt: 16ms,
    },
    running: true,
    interruption: [],
}
