emg_animation/src/snapshots/emg_animation__tests__am3.snap
---
source: emg_animation/src/lib.rs
expression: "&am_state"

---
Animation {
    steps: [
        _Step,
        To(
            [
                Prop(
                    "opacity",
                    Motion {
                        position: 1.0,
                        velocity: 0.0,
                        target: 1.0,
                        interpolation: Spring {
                            stiffness: 170.0,
                            damping: 26.0,
                        },
                        unit: "",
                        interpolation_override: None,
                    },
                ),
            ],
        ),
    ],
    style: [
        Prop(
            "opacity",
            Motion {
                position: 0.8010914294732041,
                velocity: -4.926556766606249,
                target: 0.0,
                interpolation: Spring {
                    stiffness: 170.0,
                    damping: 26.0,
                },
                unit: "",
                interpolation_override: None,
            },
        ),
    ],
    timing: Timing {
        current: 10.033s,
        dt: 17ms,
    },
    running: true,
    interruption: [],
}
