emg_animation/src/snapshots/emg_animation__tests__am_last.snap
---
source: emg_animation/src/lib.rs
expression: "&am_state"

---
Animation {
    steps: [],
    style: [
        Prop(
            "opacity",
            Motion {
                position: 1.0,
                velocity: 0.0,
                target: 1.0,
                interpolation: Spring {
                    stiffness: 170.0,
                    damping: 26.0,
                },
                unit: "",
                interpolation_override: None,
            },
        ),
    ],
    timing: Timing {
        current: 13.093s,
        dt: 17ms,
    },
    running: false,
    interruption: [],
}
