emg_animation/src/snapshots/emg_animation__tests__interrupt.snap
---
source: emg_animation/src/lib.rs
expression: "&am_state"

---
Animation {
    steps: [],
    props: [
        Prop(
            "opacity",
            Motion {
                position: NotNan(
                    1.0,
                ),
                velocity: NotNan(
                    0.0,
                ),
                target: NotNan(
                    1.0,
                ),
                interpolation: Spring {
                    stiffness: NotNan(
                        170.0,
                    ),
                    damping: NotNan(
                        26.0,
                    ),
                },
                unit: None,
                interpolation_override: None,
            },
        ),
    ],
    timing: Timing {
        current: 0ns,
        dt: 0ns,
    },
    running: true,
    interruption: [
        (
            0ns,
            [
                To(
                    [
                        Prop(
                            "opacity",
                            Motion {
                                position: NotNan(
                                    0.0,
                                ),
                                velocity: NotNan(
                                    0.0,
                                ),
                                target: NotNan(
                                    0.0,
                                ),
                                interpolation: Spring {
                                    stiffness: NotNan(
                                        170.0,
                                    ),
                                    damping: NotNan(
                                        26.0,
                                    ),
                                },
                                unit: None,
                                interpolation_override: None,
                            },
                        ),
                    ],
                ),
                To(
                    [
                        Prop(
                            "opacity",
                            Motion {
                                position: NotNan(
                                    1.0,
                                ),
                                velocity: NotNan(
                                    0.0,
                                ),
                                target: NotNan(
                                    1.0,
                                ),
                                interpolation: Spring {
                                    stiffness: NotNan(
                                        170.0,
                                    ),
                                    damping: NotNan(
                                        26.0,
                                    ),
                                },
                                unit: None,
                                interpolation_override: None,
                            },
                        ),
                    ],
                ),
            ],
        ),
    ],
}
